[package]
name = "members-map"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
rocket = {version = "0.5.0-rc.2", features = ["json"]}
serde = "1.0.137"
tokio = { version = "1", features = ["full"] }
